more static pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "./types/global.d.ts",
       "./types/vite.d.ts"
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
       ".prisma/*": ["./node_modules/.prisma/*"]
